<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/main_backgroung"
    android:orientation="vertical"
    tools:context=".CreditsActivity">

    <TextView
        android:id="@+id/textViewCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:fontFamily="@font/adamina_regular"
        android:gravity="center"
        android:text="@string/choose_your_credits"
        android:textColor="@color/white"
        android:textSize="45sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    >
    <Button
        android:id="@+id/buttonOne"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:layout_margin="5dp"
        android:fontFamily="@font/adamina_regular"
        android:backgroundTint="@color/statusBarColor"
        />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_300"
        android:layout_margin="5dp"
        android:fontFamily="@font/adamina_regular"
        android:backgroundTint="@color/statusBarColor"
        />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_500"
        android:layout_margin="5dp"
        android:fontFamily="@font/adamina_regular"
        android:backgroundTint="@color/statusBarColor"
        />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_700"
        android:layout_margin="5dp"
        android:fontFamily="@font/adamina_regular"
        android:backgroundTint="@color/statusBarColor"
        />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_900"
        android:layout_margin="5dp"
        android:fontFamily="@font/adamina_regular"
        android:backgroundTint="@color/statusBarColor"
        />

</LinearLayout>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/button_start_color_green"
        android:text="@string/start"
        android:fontFamily="@font/adamina_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</LinearLayout>